style.css
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body {
    
    font-family: 'Space Grotesk', sans-serif;
}
.hamburger_menu {
    display: none;
    cursor: pointer;
    flex-direction: column;
    gap: 6px;
    margin-right: 25px;
}
.hamburger_menu span {
    width: 25px;
    height: 3px;
    background-color: #000;
    border-radius: 2px;
}
@media screen and (max-width: 768px) {
    .navbar > ul.link, 
    .navbar .btn1 {
        display: none; 
    }
    .hamburger_menu {
        display: flex !important;
    }
    .navbar .link.mobile_active {
        display: flex !important;
        flex-direction: column;
        position: absolute;
        top: 80px;
        left: 0;
        width: 100%;
        background-color: #ffffff;
        padding: 20px;
        box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
        z-index: 999;
        gap: 15px;
        text-align: center;
        border-bottom: 2px solid black;
    }
}
.navbar {
    padding-top: 30px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    background-color: transparent;
    min-width: 300px;
}
.logo {
    padding-right: 10px;
    padding-left: 10px;
    border-radius: 20px;
    margin-left: 25px;
    font-size: 0.8em;
    font-weight: bold;
}
li,
a {
    color: #000;
    font-size: 1rem;
    list-style: none;
    text-decoration: none;
}
.link,
li,
a:visited {
    color: rgb(0, 0, 0);
}
.link,
li,
a:hover {
    color: rgb(0, 0, 0);
}
.link {
    gap: 20px;
    display: flex;
    font-size: 1rem;
}
.btn1 {
    padding: 10px 10px;
    padding-right: 20px;
    padding-left: 20px;
    margin-right: 30px;
    font-size: 1rem;
    font-weight: bold;
    background-color: transparent;
    color: #000000;
    border-radius: 10px;
}
.hero_section {
    max-width: 100%;
    min-width: 300px;
    padding-top: 100px;
    flex-wrap: wrap;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 30px;
    padding-left: 10px;
    padding-right: 20px;
}
.hero_content {
    flex: 1;
    width: 50%;
    min-width: 300px;
    margin-left: 10px;
}
.element1 {
    max-width: 100%;
    min-width: 300px;
    font-size: 1.7rem;
    text-align: left;
}
.p1 {
    margin-top: 20px;
    font-size: 1.3rem;
    max-width: 100%;
}
.btn2 {
    width: 100%;
    min-width: 300px;
    font-size: 1.6rem;
    margin-top: 25px;
    padding: 20px 20px;
    padding-left: 25px;
    padding-right: 25px;
    border-radius: 12px;
    color: white;
    background-color: #242424;
}
.hero_img {
    width: 80%;
    flex: 1;
    min-width: 300px;
    justify-content: center;
    display: flex;

}
.hero_img img {
    max-width: 345px;
    height: auto;
    width: 100%;
    min-width: 300px;

}
.brand {
    flex-wrap: wrap;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    justify-content: space-between;
    display: flex;
    width: 100%;
    min-width: 300px;
    flex-direction: row;
}
.brand1 {
    font-size: 1.7rem;
}
.brand2 {
    font-size: 1.7rem;
    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-weight: weight;
    font-style: normal;
}
.brand3 {
    font-size: 1.7rem;
}
.brand4 {
    font-size: 1.7rem;
}
.brand5 {
    font-size: 1.7rem;
}
.brand6 {
    font-size: 1.7rem;
}
.hero_section2 {
    padding: 20px;
    min-width: 300px;
}
.hero_content2{
    width: 100%;
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    min-width: 300px;
    align-items: center;
    gap: 20px;
}
.element2 {
    background-color: #B9FF66;
    padding: 5px;
    border-radius:20px ;
}
.p2 {
    flex: 1;
    width: 30%;
    min-width: 300px;
}
.box{
    padding: 15px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    min-height: 300px ;
    align-items: center; 
    min-width: 320px;
}
.box1{
    border: 1px solid black;
    padding: 20px;
    border-radius: 30px;
    margin: 10px;
    font-size: 0.8rem;
    flex: 1;
    display: flex;
    justify-content: space-around;
    height: 250px;
    width: 50%;
    min-width: 320px;
    box-shadow: 0px 5px 0px #191A23;
}
.element3{
    background-color: #B9FF66;
    min-height: 35%;
    max-height: 30%;
    min-width: 185px;
    max-width: 175px;
    border: 1px solid #B9FF66;
    border-radius: 10px;
}
.box2{
    padding: 20px;
    border-radius: 20px;
    margin: 10px;
    font-size: 0.8rem;
    flex: 1;
    background-color: #B9FF66;
    display: flex;
    justify-content: space-around;
    height: 250px;
    width: 50%;
    min-width: 320px;
    border: 1px solid black;
    box-shadow: 0px 5px 0px #191A23;
}
.element4{
    border-radius: 10px;
    background-color:white;
    border: 2px solid white;
    min-height: 35%;
    max-height: 30%;
    min-width: 175px;
    max-width: 175px;
}
.box1 img{
    padding-left: 10px;
    min-height: 100%;
    max-height: 100%;
    max-width:250px ; 
    flex:1;
    min-width: 100px;
}
.box2 img{
    padding-left: 10px;
    min-height: 100%;
    max-height: 100%;
    max-width:200px ; 
    flex:1;
    min-width: 100px;
}

.hero_section3 {
    padding-left: 10px;
    min-width: 300px;
}
.hero_content3{
    width: 100%;
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    min-width: 300px;
    align-items: center;
    gap: 20px;
}
.element5 {
    background-color: #B9FF66;
    padding: 5px;
    border-radius: 20px;
}
.p3 {
    flex: 1;
    width: 30%;
    min-width: 300px;
}
.process_section {
    max-width: 100%;
    margin: 40px auto;
    padding: 0 20px;
    min-width: 380px;
}

.process_card {
    border: 1px solid #191A23;
    border-radius: 30px;
    box-shadow: 0px 5px 0px #000000;
    padding: 30px;
}

.active_card1 {
    background-color: #B9FF66;
}


.card_header {
    display: flex;
    justify-content: space-between;
    align-items: center;        
}

.card_title {
    display: flex;
    align-items: center;
    gap: 25px;
}

.card_num {
    font-size: 2.5rem;
    font-weight: bold;
}

.card_title h3 {
    font-size: 1.5rem;
    font-weight: 600;
}
.toggle_btn {
    width: 40px;
    height: 40px;
    background-color: #F3F3F3;
    border: 1px solid #191A23;
    border-radius: 50%;
    font-size: 1.8rem;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}
.card_content {
    margin-top: 20px;
}
.card_divider {
    border: none;
    border-top: 1px solid #191A23;
    margin-bottom: 20px;
}
.card_content p {
    font-size: 1rem;
    line-height: 1.5;
    color: #191A23;
}
.hero_section4 {
    padding-left: 10px;
    min-width: 300px;
}
.hero_content4{
    width: 100%;
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    min-width: 300px;
    align-items: center;
    gap: 20px;
}
.element6 {
    background-color: #B9FF66;
    padding: 5px;
    border-radius: 20px;
}
.p4 {
    flex: 1;
    width: 30%;
    min-width: 300px;
}

.hero_section5 {
    max-width: 1200px;
    margin: 50px auto;
    padding: 0 20px;
}


.contact_container {
    box-shadow: 3px solid #B9FF66;
    border: 1px solid rgb(197, 218, 15);
    background-color: #ffffff;
    border-radius: 40px;
    padding: 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 100px;
    min-width: 400px;
    max-width: 100%;
}

.contact_form {
    flex: 1;
    min-width: 300px;     
    max-width: 500px;
    display: flex;
    flex-direction: column;
    gap: 25px;
}
.radio_group {
    display: flex;
    gap: 35px;
    margin-bottom: 10px;
}

.radio_label {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 1.1rem;
    cursor: pointer;
}

.radio_label input[type="radio"] {
    display: none; 
}

.custom_radio {
    width: 24px;
    height: 24px;
    border: 1px solid #191A23;
    border-radius: 50%;
    display: inline-block;
    position: relative;
    background-color: #fff;
}

.radio_label input[type="radio"]:checked + .custom_radio::after {
    content: "";
    width: 12px;
    height: 12px;
    background-color: #B9FF66;
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.input_group {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.input_group label {
    font-size: 1rem;
    font-weight: 500;
}

.input_group input,
.input_group textarea {
    width: 100%;
    padding: 18px;
    border: 1px solid #191A23;
    border-radius: 15px;
    font-size: 1rem;
    background-color: #fff;
    outline: none;
    font-family: inherit;
}

.submit_btn {
    background-color: #191A23;
    color: #fff;
    border: none;
    padding: 20px;
    border-radius: 14px;
    font-size: 1.2rem;
    cursor: pointer;
    font-weight: bold;
    margin-top: 10px;
}

.contact_img_box {
    flex: 1;
    min-width: 300px;     
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact_img_box img {
    max-width: 400px;
    width: 100%;
    height: auto;
}
.footer_section {
    max-width: 100%;
    min-width: 400px;
    margin: 60px auto 20px auto;
    padding: 0 20px;
}

.footer_container {
    background-color: #191A23;
    border-radius: 40px 40px 0px 0px; 
    padding: 50px;
    color: #fff;
}

.footer_top {
    display: flex;
    flex-wrap: wrap;        
    justify-content: space-between;
    align-items: center;
    gap: 30px;
    margin-bottom: 40px;
}
.footer_logo h2 {
    color: #fff;
    font-size: 1.8rem;
}
.footer_links {
    display: flex;
    flex-wrap: wrap;        
    gap: 30px;
}
.footer_links a {
    color: #fff;
}
.footer_links a:hover {
    color: #B9FF66; 
}
.footer_socials {
    display: flex;
    gap: 15px;
}
.footer_socials a {
    width: 35px;
    height: 35px;
    background-color: #fff;
    color: #191A23;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    font-size: 1.1rem;
}
.footer_middle {
    display: flex;
    flex-wrap: wrap;       
    justify-content: space-between;
    align-items: center;
    gap: 40px;
    margin-bottom: 40px;
}

.footer_contact_info {
    display: flex;
    flex-direction: column;
    gap: 12px;
    min-width: 280px;
}

.contact_badge {
    background-color: #B9FF66;
    color: #000;
    padding: 4px 10px;
    border-radius: 7px;
    font-weight: bold;
    width: fit-content;
    font-size: 1rem;
}

.footer_contact_info p {
    font-size: 1rem;
    line-height: 1.6;
}
.footer_newsletter {
    background-color: #2B2C35;
    padding: 30px;
    border-radius: 20px;
    display: flex;
    flex-wrap: wrap;       
    align-items: center;
    flex: 1;
    min-width: 300px;
    max-width: 600px;
}
.footer_newsletter input {
    flex: 1;
    min-width: 200px;
    padding: 16px;
    background-color: transparent;
    border: 1px solid #fff;
    border-radius: 12px;
    color: #fff;
    outline: none;
}
.subscribe_btn {
    background-color: #B9FF66;
    color: #000;
    border: none;
    padding: 16px 28px;
    border-radius: 12px;
    font-weight: bold;
    font-size: 1rem;
    cursor: pointer;
    flex-grow: 1;     
}
.footer_divider {
    border: none;
    border-top: 1px solid #4F5059;
    margin-bottom: 25px;
}

.footer_bottom {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 20px;
    font-size: 0.9rem;
}

.privacy_link {
    color: #fff;
    text-decoration: underline;
}

